# rise-router

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/crates/billing/: Cargo.toml
backend/crates/billing/src/: admin_read.rs  charge.rs  email.rs  email_cron.rs  export.rs  invoice.rs  lib.rs  margin.rs  order.rs  reconcile.rs  settle.rs  wallet.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  state.rs
backend/crates/crm/: Cargo.toml
backend/crates/crm/src/: assignment.rs  customer.rs  lib.rs  note.rs  onboard.rs  recharge.rs
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: api_keys.rs  artifacts.rs  channels.rs  customer_assignments.rs  customer_notes.rs  datasets.rs  discounts.rs  groups.rs  invoices.rs  lib.rs  model_channels.rs  models.rs  orders.rs  organizations.rs  permissions.rs  phone_codes.rs  prices.rs  reconciliations.rs  report_definitions.rs  role_permissions.rs  roles.rs  tasks.rs  transactions.rs  usage_logs.rs  user_roles.rs  users.rs  wallets.rs
backend/crates/gateway/: Cargo.toml
backend/crates/gateway/src/: channel.rs  health.rs  lib.rs  model.rs  model_channel.rs  relay.rs  route.rs
backend/crates/gateway/src/adapter/: anthropic.rs  gemini.rs  mod.rs  openai.rs  sse.rs
backend/crates/identity/: Cargo.toml
backend/crates/identity/src/: api_key.rs  auth.rs  guard.rs  lib.rs  organization.rs  role_admin.rs  session.rs
backend/crates/pricing/: Cargo.toml
backend/crates/pricing/src/: discount.rs  group.rs  lib.rs  price.rs  resolve.rs
backend/crates/rbac/: Cargo.toml
backend/crates/rbac/src/: lib.rs  routes.rs
backend/crates/report/: Cargo.toml
backend/crates/report/src/: dataset.rs  deliver.rs  engine.rs  lib.rs  report_def.rs  source.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: main.rs
backend/crates/support/: Cargo.toml
backend/crates/support/src/: lib.rs
backend/crates/task/: Cargo.toml
backend/crates/task/src/: adapter.rs  admin.rs  api.rs  lib.rs  worker.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260613_000001_create_groups.rs  m20260613_000002_create_models.rs  m20260613_000003_create_prices.rs  m20260613_000004_create_discounts.rs  m20260613_000005_create_channels.rs  m20260613_000006_create_model_channels.rs  m20260613_000007_create_organizations.rs  m20260613_000008_create_api_keys.rs  m20260613_000009_create_usage_logs.rs  m20260613_000010_widen_budget_precision.rs  m20260613_000011_create_wallets.rs  m20260613_000012_create_transactions.rs  m20260613_000013_create_orders.rs  m20260613_000014_create_reconciliations.rs  m20260613_000015_create_users.rs  m20260613_000016_create_phone_codes.rs  m20260613_000017_create_roles.rs  m20260613_000018_create_permissions.rs  m20260613_000019_create_role_permissions.rs  m20260613_000020_create_user_roles.rs  m20260613_000021_add_phone_code_attempts.rs  m20260613_000022_create_invoices.rs  m20260613_000023_create_cron_state.rs  m20260613_000024_create_customer_notes.rs  m20260613_000025_create_customer_assignments.rs  m20260613_000026_create_datasets.rs  m20260613_000027_create_report_definitions.rs  m20260613_000028_alter_channels_health.rs  m20260613_000029_create_tasks.rs  m20260613_000030_create_artifacts.rs  m20260613_000031_index_usage_logs_request_id.rs  main.rs
backend/scripts/: smoke_crm.sh  smoke_report.sh
docs/: README.md  architecture.md  data-model.md  glm 给的架构设计.md  i18n.md  implementation.md  roadmap.md  为什么 Rust 非常合适.md  现代 AI API 聚合系统架构设计文档 (基于 Rust).md
frontend/shell/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/shell/src/: main.tsx  router.tsx
frontend/shell/src/api/: admin.ts  billing.ts  client.ts  crm.ts  report.ts  tasks.ts
frontend/shell/src/components/: LocaleSwitcher.tsx  ThemeControls.tsx
frontend/shell/src/components/ui/: FilterTabs.tsx  FormDrawer.tsx  KpiCard.tsx  PageHeader.tsx  SectionCard.tsx  Sparkline.tsx  StatusPill.tsx  index.ts
frontend/shell/src/i18n/: LocaleProvider.tsx  config.ts  errors.ts  index.ts  store.ts
frontend/shell/src/i18n/locales/en-US/: auth.json  common.json  errors.json
frontend/shell/src/i18n/locales/zh-CN/: auth.json  common.json  errors.json
frontend/shell/src/layout/: AppLayout.tsx
frontend/shell/src/pages/: Dashboard.tsx  Login.tsx
frontend/shell/src/pages/admin/: AdminTokenSettings.tsx  ApiKeysPage.tsx  ChannelsPage.tsx  CrudPage.tsx  PricePreview.tsx  resourceShared.tsx  resources.ts
frontend/shell/src/pages/apps/: AppMarket.tsx
frontend/shell/src/pages/billing/: Billing.tsx
frontend/shell/src/pages/crm/: CustomerDetail.tsx  CustomerList.tsx  labels.ts
frontend/shell/src/pages/org/: OrgAuth.tsx
frontend/shell/src/pages/pricing/: PricingFive.tsx
frontend/shell/src/pages/rbac/: Rbac.tsx
frontend/shell/src/pages/report/: ReportBuilder.tsx
frontend/shell/src/pages/settings/: Appearance.tsx
frontend/shell/src/pages/support/: Support.tsx
frontend/shell/src/pages/tasks/: Tasks.tsx
frontend/shell/src/store/: auth.ts
frontend/shell/src/styles/: global.css  tokens.css
frontend/shell/src/theme/: ThemeProvider.tsx  applyCssVars.ts  branding.ts  chartColors.ts  presets.ts  store.ts  tokens.ts  types.ts  useResolvedMode.ts
