[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/entity",
    "crates/identity",
    "crates/rbac",
    "crates/gateway",
    "crates/pricing",
    "crates/billing",
    "crates/task",
    "crates/report",
    "crates/crm",
    "crates/support",
    "crates/server",
    "migration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
sea-orm = { version = "2.0.0-rc.40", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
] }
sea-orm-migration = { version = "2.0.0-rc.40", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = "0.4"
rust_decimal = "1"
sha2 = "0.10"

# internal crates
rise-core = { path = "crates/core" }
rise-entity = { path = "crates/entity" }
rise-identity = { path = "crates/identity" }
rise-rbac = { path = "crates/rbac" }
rise-gateway = { path = "crates/gateway" }
rise-pricing = { path = "crates/pricing" }
rise-billing = { path = "crates/billing" }
rise-task = { path = "crates/task" }
rise-report = { path = "crates/report" }
rise-crm = { path = "crates/crm" }
rise-support = { path = "crates/support" }
