[package]
name = "migration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
sea-orm-migration = { workspace = true, features = ["cli"] }
