[package]
name = "rise-crm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
rise-core.workspace = true
rise-entity.workspace = true
rise-identity.workspace = true
rise-rbac.workspace = true
rise-billing.workspace = true
sea-orm.workspace = true
serde.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true
