[package]
name = "rise-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
rise-core.workspace = true
rise-entity.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
sha2.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
