[package]
name = "rise-task"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
rise-core.workspace = true
rise-entity.workspace = true
rise-identity.workspace = true
rise-billing.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
deadpool-redis.workspace = true
tokio.workspace = true
reqwest.workspace = true
object_store.workspace = true
bytes.workspace = true
async-trait.workspace = true
rand.workspace = true
